<resources>
    <string name="app_name">WhatsApp 2</string>
    <string name="app_logo_here">App logo here</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="already_have_account">Already have account</string>
    <string name="sign_up_with_phone">Sign Up with Phone</string>
    <string name="click_to_sign_up">Click to Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="settings">Settings</string>
    <string name="group_chat">Group Chat</string>
    <string name="log_out">Log Out</string>
    <string name="default_web_id_token">220945371699-u2av5e15fdhej2oqssndlqptbb01tl15.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_pages">App Pages</string>
    <string name="last_message">last Message</string>
    <string name="devank">Devank</string>
    <string name="send_message_button">send message </string>
    <string name="enter_your_message_here">Enter your message here</string>
    <string name="app_back_to_chat_screen_option">app back to chat screen option</string>
    <string name="phone_number">phone number</string>
    <string name="press_to_call">press to call</string>
    <string name="press_to_video_call">press to video call</string>
    <string name="text_test">text test</string>
    <string name="_3_38_pm">3:38 pm</string>
    <string name="sender">Sender</string>
    <string name="_10_44_30">12:17 pm</string>
    <string name="to_add_user_pic">to add user pic</string>
    <string name="about">About</string>
    <string name="type_status_here">Type status here</string>
    <string name="press_to_go_back">Press to go back</string>
    <string name="save">Save</string>
    <string name="enter_name">Enter name</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_app">About App</string>
    <string name="_5_6_2024_1_37pm">5/6/2024 1:37PM</string>
    <string name="status_not_available">Status Not available</string>
</resources>