<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpActivity"
    android:orientation="vertical"
    android:background="@drawable/w1"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:src="@drawable/ic_whatsapp"
            android:id="@+id/appImageView"
            android:contentDescription="@string/app_logo_here"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/appUsername"
            android:hint="@string/username"
            android:ems="10"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:padding="9dp"
            android:textColor="@color/lightGrey"
            android:textColorHint="@color/chatBackground"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/appEmail"
            android:hint="@string/email"
            android:ems="10"
            android:autofillHints="name"
            android:inputType="textEmailAddress"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:padding="9dp"
            android:textColor="@color/lightGrey"
            android:textColorHint="@color/chatBackground"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/appPassword"
            android:hint="@string/password"
            android:ems="10"
            android:autofillHints="name"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:padding="9dp"
            android:textColor="@color/lightGrey"
            android:textColorHint="@color/chatBackground"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/appAlreadyHaveAccount"
            android:layout_gravity="end"
            android:text="@string/already_have_account"
            android:textColor="@color/white"
            android:padding="5dp"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/btnSignup"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/design_default_color_secondary_variant"
            android:padding="15dp"
            android:text="@string/sign_up"
            app:cornerRadius="8dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            >
            <Button
                android:id="@+id/btnGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:padding="15dp"
                android:text="@string/google"
                app:cornerRadius="8dp"
                android:drawableLeft="@drawable/ic_google"
                android:textColor="@color/black"
                />
            <Button
                android:id="@+id/btnFaceBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/fb_color"
                android:padding="15dp"
                android:text="@string/facebook"
                app:cornerRadius="8dp"
                android:drawableLeft="@drawable/ic_facebook"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/appSignUpPhone"
            android:text="@string/sign_up_with_phone"
            android:textColor="@color/white"
            android:padding="5dp"
            android:textStyle="bold"
            android:textSize="19sp"
            />
    </LinearLayout>
</LinearLayout>