<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignInActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/w1"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_whatsapp"
            android:id="@+id/appImageView"
            android:contentDescription="@string/app_logo_here" />

        <EditText
            android:id="@+id/appTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="9dp"
            android:textColor="@color/lightGrey"
            android:textColorHint="@color/chatBackground" />

        <EditText
            android:id="@+id/appTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="9dp"
            android:textColor="@color/lightGrey"
            android:textColorHint="@color/chatBackground" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/appTextClickSignUp"
            android:text="@string/click_to_sign_up"
            android:textColor="@color/white"
            android:layout_gravity="end"
            android:padding="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/appBtnSignIn"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/design_default_color_secondary_variant"
            android:padding="15dp"
            android:text="@string/sign_in"
            app:cornerRadius="8dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/appBtnGoogle"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_google"
                android:text="@string/google"
                android:padding="15dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                app:cornerRadius="8dp"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/appBtnFacebook"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_facebook"
                android:text="@string/facebook"
                android:padding="15dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/fb_color"
                app:cornerRadius="8dp"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/appTextSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/sign_up_with_phone"
            android:textColor="@color/white"
            android:textSize="18sp"
            />
    </LinearLayout>


</LinearLayout>