<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsActivity"
    android:background="@drawable/w1"
    >
    <ImageView
        android:id="@+id/appBackArrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
       android:src="@drawable/leftarrowwhite"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/press_to_go_back" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appBackArrow"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical"
        >


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@tools:sample/avatars"
            android:layout_margin="10dp"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/plus"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="-25dp"
            android:src="@drawable/plus"
            android:contentDescription="@string/to_add_user_pic"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
         <TextView
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="User name"
             android:textColor="@color/white"
             android:padding="5dp"
             android:textSize="16sp"
             tools:ignore="HardcodedText" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/appUserName"
                android:hint="@string/enter_name"
                android:textColorHint="@color/white"
                android:autofillHints="username"
                android:inputType="textPersonName"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="@color/white"
                android:padding="5dp"
                android:textSize="16sp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/appUserStatus"
                android:hint="@string/type_status_here"
                android:textColorHint="@color/white"
                android:autofillHints="none"
                android:inputType="textLongMessage"
                />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appSaveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_bg"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/linear_setting_bg"
        android:padding="40dp"
        android:visibility="visible"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"

            />
    </LinearLayout>
</RelativeLayout>