<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GroupChatActivity"
    android:background="@drawable/w4"
    android:orientation="horizontal"
    android:id="@+id/appParent">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appToolBarContainer">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:minHeight="?attr/actionBarSize"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/appBackArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_back_to_chat_screen_option"
                    android:src="@drawable/leftarrowwhite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.013"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/appProfilePic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/avatar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.028"
                    app:layout_constraintStart_toEndOf="@id/appBackArrow"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/appUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="112dp"
                    android:text="@string/username"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.263"
                    app:layout_constraintStart_toEndOf="@+id/appProfilePic"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/videocall"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/press_to_video_call"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/call"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="0.888"
                    app:layout_constraintStart_toEndOf="@+id/appUserName"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/press_to_call"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="3dp"
        android:id="@+id/appChatRecyclerView"
        android:layout_above="@id/appLinear"
        android:layout_below="@id/appToolBarContainer"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/appLinear"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        >

        <EditText
            android:id="@+id/appMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:autofillHints="username,user-email"
            android:background="@drawable/background_message"
            android:ems="10"
            android:hint="@string/enter_your_message_here"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:textColorHint="#757575" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/appSendButton"
            android:background="@drawable/send_background"
            android:contentDescription="@string/send_message_button"
            android:padding="5dp"
            android:src="@drawable/send_icon"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>
</RelativeLayout>